apps/planetlia_platform/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-backend
  labels:
    app: platform-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-backend
  template:
    metadata:
      labels:
        app: platform-backend
    spec:
      containers:
        - name: backend
          image: planetlia/backend:latest
          ports:
            - containerPort: 8080
