apps/planetlia_platform/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-backend-service
spec:
  selector:
    app: platform-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
